fix(booking): get list all - native query compare list = to IN